--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,9 @@
 
     --lissage-1: cubic-bezier(.42, 0, .11, .98);
 }
-
+html, #page {
+    scroll-behavior: smooth;
+}
  /*Menu*/
 #menubutton {
     position: fixed;
@@ -49,11 +51,15 @@
     width: 100%;
     height: 100%;
     left: 0;
-    transition: all 0.8s var(--lissage-1);
+    overflow-x: hidden;
 }
 #intro {
     /*background-image: url("../img/poster-video.jpg");*/
+    transition: all 0.8s var(--lissage-1);
     background-size: cover;
+}
+#page.loaded {
+    transition: all 0.8s var(--lissage-1);
 }
 #bgvid {
     position: absolute;
@@ -263,7 +269,7 @@
     white-space: nowrap;
     overflow: hidden;
 }
-#play-button:hover #play-text {
+#play-button:hover #play-text, #play-button.open #play-text {
     margin-left: 20px;
 }
 
@@ -355,13 +361,31 @@ margin: 0px 100px 0px 100px;
     margin: 0;
 }
 
-#chiffres-cle2 {
+#salles {
     align-items: center;
     color: black;
     text-align: center;
     margin: 50px 0 200px 0;
 }
-
+#salles .card {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+#salles .col-lg-4{
+    transition: all 0.8s var(--lissage-1);
+    transition-delay: 0.2s;
+}
+#salles .col-lg-4:first-child {
+    transition-delay: 0s;
+}
+#salles .col-lg-4:last-child {
+    transition-delay: .4s;
+}
+#salles.not-visible .col-lg-4 {
+    opacity: 0;
+    transform: translate3d(30%, 0, 0);
+}
 a, a:hover {
     text-decoration: none;
     color: inherit;
@@ -372,6 +396,7 @@ a, a:hover {
     text-align: center;
     font-size: 300%;
     font-family: 'Montserrat', sans-serif;
+    transition: all .8s var(--lissage-1) .5s;
 }
 .count-data {
     font-size: 200%;
@@ -393,16 +418,36 @@ a, a:hover {
 
 #rect-lancement {
     position: absolute;
-    width: 90%;
+    width: 100%;
     height: 70%;
-    left: 5%;
+    left: 0;
     top: 30%;
-    background-color: var(--main-color-lighter);
     z-index: -1;
+}
+#rect-lancement-color {
+    height: 100%;
+    width: 100%;
+    background-color: var(--main-color-lighter);
+    transition: all 1s var(--lissage-1) .05s;
+}
+#avant-lancement-wrapper.not-visible #rect-lancement-color {
+    transform: translate3d(100%, 0, 0) scale(0, 1);
+}
+#avant-lancement-wrapper.not-visible #avant-lancement-timer {
+    opacity: 0;
+    transform: translateY(50%);
 }
 
 #texte-lancement {
-    font-size: 350%;
+    font-size: 200%;
+    font-family: inherit;
+    font-weight: 300;
+    text-transform: uppercase;
+    transition: all .8s var(--lissage-1) .6s;
+}
+#texte-lancement.not-visible {
+    opacity: 0;
+    letter-spacing: 15px;
 }
 
 #chiffres-cle5 {
@@ -414,21 +459,28 @@ a, a:hover {
     font-weight: 400;
 }
 
-#chiffres-cle5 a {
+#resa-button {
     border: 2px solid white;
     border-radius: 100px;
     padding: 15px 50px;
     text-transform: uppercase;
     margin-bottom: 200px;
     font-size: 180%;
-    transition: all 0.3s;
+    transition: all 0.3s var(--lissage-1);
 }
-#chiffres-cle5 a:hover {
+#resa-button:hover {
     color: #000;
     background-color: #fff;
 }
+#resa-button-wrapper {
+    transition: all .5s cubic-bezier(0.25, 1.03, 0.6, 1.4) .4s;
+}
+#resa-button-wrapper.not-visible {
+    transform: scale(1.5);
+    opacity: 0;
+}
 
-footer {
+#footer-accueil {
     background-color: #575757;
 }
 
@@ -449,6 +501,10 @@ footer {
 
 #carte {
     color: #a31b18;
+}
+.card-img-top {
+    height: 180px;
+    background-size: cover;
 }
 
 #mentions {
