--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,45 @@
 :root {
     --main-color: #7a0000;
-    --main-color-lighter: #a31b18;
+    --main-color-lighter: #ba1208;
     --main-color-darker: #500000;
+    --emphasis-color: #ba2e29;
     --dark-1: #1d1d1d;
-
+    --dark-fond: #1d1d1d;
+    --bg-ext-page: #141414;
     --lissage-1: cubic-bezier(.42, 0, .11, .98);
 }
 html, #page {
-    scroll-behavior: smooth;
+    /*scroll-behavior: smooth;*/
+}
+body {
+     background-color: var(--dark-fond);
+ }
+.no-transition {
+    transition: none !important;
 }
  /*Menu*/
-#menubutton {
+#menubar {
     position: fixed;
-    right: 30px;
-    top: 15px;
+    left: 0;
+    width: 50px;
+    height: 100%;
+    background-color: var(--dark-fond);
+    padding: 0;
+    border-right: solid 1px #F4F4F4;
+}
+#menubutton {
+    position: absolute;
+    left: 5px;
+    top: 50%;
     width: 40px;
     height: 40px;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
     z-index: 11;
+    transform: scale(0.8) translateY(-50%);
 }
 
-.menubar {
+.bar-menubtn {
     width: 100%;
     height: 2px;
     margin-top: 10px;
@@ -30,24 +48,162 @@ html, #page {
     transition: all 0.25s ease;
 }
 
-#menubutton.open .menubar:first-child {
+#menubutton.open .bar-menubtn:first-child {
     transform: translateY(12px) rotate(225deg);
     transition: transform 0.25s ease 0.3s;
 }
 
-#menubutton.open .menubar:nth-child(2) {
+#menubutton.open .bar-menubtn:nth-child(2) {
     transform: scale(0, 1);
 }
 
-#menubutton.open .menubar:last-child {
+#menubutton.open .bar-menubtn:last-child {
     transform: translateY(-12px) rotate(-45deg);
     transition: transform 0.25s ease 0.3s;
+}
+
+
+#menu {
+    position: absolute;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 130%;
+    font-weight: 500;
+    left: 50px;
+    top: 50%;
+    transform: translateY(-45%);
+}
+
+#menu ul {
+    list-style-type: none;
+}
+.menuitem {
+    text-transform: uppercase;
+    margin: 15px 0;
+    position: relative;
+    transform: translate3d(400px, 0, 0);
+    transition: all 0.5s var(--lissage-1);
+    opacity: 0;
+}
+#menu ul a:nth-child(2) .menuitem {
+    transition-delay: .1s;
+}
+#menu ul a:nth-child(3) .menuitem {
+    transition-delay: .2s;
+}
+#menu ul a:nth-child(4) .menuitem {
+    transition-delay: .3s;
+}
+#menu.open .menuitem {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+}
+.menuitem::before {
+    content: '';
+    background-color: var(--emphasis-color);
+    position: absolute;
+    left: -4px;
+    bottom: 0;
+    width: 0;
+    height: 5px;
+    transition: all 0.25s var(--lissage-1) 0.2s, width 0.4s var(--lissage-1);
+    z-index: -1;
+}
+.menuitem:hover::before {
+    width: 110%;
+    height: 100%;
+    padding: 10px;
+}
+
+#viewport {
+    position: fixed;
+    height: 100%;
+    left: 50px;
+    right: 0;
+    top: 0;
+    overflow: hidden;
+    transition: all 0.8s var(--lissage-1);
+}
+#viewport.menuopen {
+    opacity: 0.6;
+    transform: translate3d(20%, 0, 0) scale(0.8);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    pointer-events: none;
+}
+#bloc-accueil {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    transition: all .6s var(--lissage-1);
+}
+#viewport.extpage #bloc-accueil {
+    transform: scale(0.5);
+}
+
+#extpage {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    right: 0;
+    top: 0;
+    overflow: hidden;
+    transition: all 0.8s var(--lissage-1);
+    transform: translate3d(100%, 0, 0);
+    overflow-y: scroll;
+    color: #fff;
+    background-color: var(--bg-ext-page);
+}
+
+#viewport.extpage #extpage {
+    transition-delay: .3s;
+    transform: translate3d(0, 0, 0);
+}
+
+#transi-cache-menu, #transi-cache-extpage {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 1000;
+    transition: all .3s ease-out;
+    transform: scale(0, 1);
+    background-color: var(--dark-fond);
+    transform-origin: left center;
+}
+#transi-cache-accueil {
+    transform-origin: right center;
+    transition-delay: .3s
+}
+#transi-cache-menu.cacher{
+    transition: all .25s ease-in;
+    transform: scale(1, 1);
+}
+#transi-cache-extpage {
+    /*transform: scale(1, 1);*/
+    transition-delay: .5s;
+}
+#viewport.extpage ~ #extpage #transi-cache-extpage {
+    transform: scale(0, 1);
+    transition: all .25s ease-in 0.3s;
+}
+
+#bouton-retour {
+    position: sticky;
+    top: 30px;
+    margin-left: 30px;
+    z-index: 100;
 }
 
 #intro, #page {
     background-color: #141414;
     color: #fff;
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     left: 0;
@@ -61,6 +217,18 @@ html, #page {
 #page.loaded {
     transition: all 0.8s var(--lissage-1);
 }
+
+#page {
+    top: 0;
+    background-color: var(--dark-1);
+    transform: translate3d(0, 100%, 0) scale3d(2, 2, 1);
+    transform-origin: top center;
+    overflow-y: scroll;
+    color: white;
+}
+#page.visible {
+    transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+}
 #bgvid {
     position: absolute;
     right: 0;
@@ -69,7 +237,7 @@ html, #page {
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -100;
+    /*z-index: -100;*/
     background: url("../img/poster-video.jpg") no-repeat;
     background-size: cover;
     opacity: 0;
@@ -123,7 +291,7 @@ html, #page {
 }
 
 #intro-container {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
@@ -273,26 +441,21 @@ html, #page {
     margin-left: 20px;
 }
 
-#page {
-    top: 0;
-    background-color: var(--dark-1);
-    transform: translate3d(0, 100%, 0) scale3d(2, 2, 1);
-    transform-origin: top center;
-    overflow-y: scroll;
-    color: white;
-}
-#page.visible {
-    transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
-}
 
 .titre-section {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     font-size: 29px;
     width: 100%;
-    padding: 40px 0px 60px 0;
+    padding: 40px 0px 40px 0;
     text-align: center;
     text-transform: uppercase;
+
+    transition: all 1s ease-out;
+}
+
+.titre-section.not-visible {
+    opacity: 0;
 }
 
 .text-contenu {
@@ -305,24 +468,60 @@ html, #page {
     font-size: 130%;
 }
 
-.image {
-    height: 500px;
+.phrase-emphase {
+    font-weight: 300;
+}
+.phrase-emphase span {
+    font-size: 120%;
+    font-weight: 600;
+}
+.image, .image-header {
+    height: 100%;
     width: 100%;
     background-color: red;
+    background-size: cover;
+    background-position: center center;
 }
-
+.image-header {
+    position: relative;
+    height: 500px;
+    background-attachment: fixed;
+}
+.image-header::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 300px;
+    background: linear-gradient(rgba(0,0,0,0), var(--bg-ext-page));
+}
 
 .texte-image {
-font-size: 150%;
-margin: 0px 100px 0px 100px;
+    font-size: 130%;
+    margin: 0px 100px 100px 100px;
+    transition: all 1s ease-out;
+    }
+
+.texte-image.not-visible {
+    opacity: 0;
 }
 
-#marges1 {
-    padding-top: 50px;
+/*#marges1 {
+    padding-top: 0px;
 }
 
 #marges2{
-    padding-top: 80px;
+    padding-top: 0px;
+}*/
+
+#bonneChance {
+    font-size: 140%;
+    transition: all 1s ease-out 0.5s;
+}
+
+#bonneChance.not-visible {
+    opacity: 0;
 }
 
 #row1 {
@@ -345,10 +544,20 @@ margin: 0px 100px 0px 100px;
 
 .chiffres {
     font-size: 500%;
+    transition: all 0.8s ease-out;
+}
+
+.chiffres.not-visible {
+    opacity: 0;
 }
 
 #chiffres2 {
-    font-size: 800%
+    font-size: 800%;
+    transition: all 0.5s ease-out;
+}
+
+#chiffres2.not-visible {
+    opacity: 0;
 }
 
 .police1 {
@@ -450,7 +659,12 @@ a, a:hover {
     letter-spacing: 15px;
 }
 
-#chiffres-cle5 {
+.nom-theme {
+    padding-top: 0;
+    margin-top: 0;
+}
+
+.section-resa {
     align-items: center;
     text-align: center;
     width: 100%;
@@ -459,7 +673,7 @@ a, a:hover {
     font-weight: 400;
 }
 
-#resa-button {
+.resa-button {
     border: 2px solid white;
     border-radius: 100px;
     padding: 15px 50px;
@@ -468,14 +682,14 @@ a, a:hover {
     font-size: 180%;
     transition: all 0.3s var(--lissage-1);
 }
-#resa-button:hover {
+.resa-button:hover {
     color: #000;
     background-color: #fff;
 }
-#resa-button-wrapper {
+.resa-button-wrapper {
     transition: all .5s cubic-bezier(0.25, 1.03, 0.6, 1.4) .4s;
 }
-#resa-button-wrapper.not-visible {
+.resa-button-wrapper.not-visible {
     transform: scale(1.5);
     opacity: 0;
 }
@@ -507,29 +721,27 @@ a, a:hover {
     background-size: cover;
 }
 
-#mentions {
+.mentions {
     margin: 0;
     padding: 0;
     font-size: 65%;
 }
-
-#main {
-    background-color: #141414;
-    color: #fff;
+.lien-sn {
+    margin: 0 8px;
 }
 
-#logo-theme {
+.logo-theme {
     text-align: center;
     width: 100%;
     top: 20%;
     left: 44%;
 }
 
-#logo-theme img{
+.logo-theme img{
     width: 12%;
 }
 
-#header {
+#header-extpage {
     align-items: center;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
@@ -544,13 +756,50 @@ a, a:hover {
     align-items: center;
     text-align: center;
     padding-top: 10px;
+    background-color: #575757;
 }
 
-#texte {
-    padding-bottom: 30px;
+.description-salle {
+    font-size: 110%;
+    padding-bottom: 80px;
 }
 .social-net {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#titreFormulaire {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 400%;
+    padding: 26px 0;
+}
+
+input[type="text"], input[type="number"] {
+width: 350px;
+}
+
+input {
+    padding: 7px;
+}
+
+form {
+    padding-bottom: 20px;
+}
+
+#jourFerie {
+    text-align: center;
+
+}
+
+#avertissement {
+font-size: 80%;
+}
+
+#gras {
+    font-weight: 700;
+}
+
+div.row.description-salle {
+    padding-bottom: 0;
 }
