--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,7 @@ body {
 }
 #viewport.extpage #bloc-accueil {
     transform: scale(0.5);
+    opacity: 0;
 }
 
 #extpage {
@@ -158,7 +159,11 @@ body {
     color: #fff;
     background-color: var(--bg-ext-page);
 }
-
+#extpage.dark {
+    transition: all .2s;
+    transition-delay: 0s;
+    opacity: 0;
+}
 #viewport.extpage #extpage {
     transition-delay: .3s;
     transform: translate3d(0, 0, 0);
@@ -303,7 +308,7 @@ body {
 }
 
 #logo {
-    z-index: 1000;
+    z-index: 5;
     position: absolute;
     text-align: center;
     width: 12%;
