Deploiement mercredi Soir

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -703,7 +703,7 @@ a, a:hover {
     background-color: #575757;
 }
 
-#chiffres-clefooter {
+#cont-footer {
     align-items: center;
     text-align: center;
     padding: 40px 0 10px 0;
