--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
     --main-color: #7a0000;
     --main-color-lighter: #ba1208;
     --main-color-darker: #500000;
-    --emphasis-color: #ba2e29;
+    --emphasis-color: #ba1d1b;
     --dark-1: #1d1d1d;
     --dark-fond: #1d1d1d;
     --bg-ext-page: #141414;
@@ -466,6 +466,7 @@ body {
 .text-contenu {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
+    text-align: justify;
 }
 
 #texte-intro {
@@ -492,16 +493,30 @@ body {
     height: 500px;
     background-attachment: fixed;
 }
-.image-header::after {
+.image-header::before {
     content: '';
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 300px;
+    height: 400px;
     background: linear-gradient(rgba(0,0,0,0), var(--bg-ext-page));
 }
-
+.nom-theme{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 300%;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    padding: 40px 0px 5px 0;
+    text-transform: uppercase;
+    transition: all 1s ease-out;
+}
+.caracteristiques-salle {
+    position: sticky;
+    top: 10px;
+}
 .texte-image {
     font-size: 130%;
     margin: 0px 100px 100px 100px;
@@ -664,10 +679,6 @@ a, a:hover {
     letter-spacing: 15px;
 }
 
-.nom-theme {
-    padding-top: 0;
-    margin-top: 0;
-}
 
 .section-resa {
     align-items: center;
@@ -677,6 +688,17 @@ a, a:hover {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
+.section-resa-theme {
+    height: auto;
+    padding: 10px 0;
+}
+.section-resa-theme .resa-button-wrapper {
+    transform: scale(0.6);
+}
+.section-resa-theme .resa-button.not-visible {
+    opacity: 0;
+    letter-spacing: 8px;
+}
 
 .resa-button {
     border: 2px solid white;
@@ -685,7 +707,7 @@ a, a:hover {
     text-transform: uppercase;
     margin-bottom: 200px;
     font-size: 180%;
-    transition: all 0.3s var(--lissage-1);
+    transition: all 0.4s var(--lissage-1);
 }
 .resa-button:hover {
     color: #000;
@@ -743,13 +765,14 @@ a, a:hover {
 }
 
 .logo-theme img{
-    width: 12%;
+    width: 5%;
 }
 
 #header-extpage {
     align-items: center;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'ALISEO', sans-serif;
+    font-size: 90%;
     padding-bottom: 30px;
 }
 
@@ -766,26 +789,147 @@ a, a:hover {
 
 .description-salle {
     font-size: 110%;
+    padding-top: 30px;
     padding-bottom: 80px;
+    text-align: justify;
 }
+.info-salle {
+    text-transform: uppercase;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 90%;
+    margin: 15px 0;
+    transition: all 0.6s var(--lissage-1) 0.3s;
+    padding-bottom: 8px;
+}
+.joueurs {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 5px;
+}
+.joueur {
+    transition: all .3s .1s;
+}
+.joueur:nth-child(2) {transition-delay: .2s}
+.joueur:nth-child(3) {transition-delay: .3s}
+.joueur:nth-child(4) {transition-delay: .4s}
+.joueur:nth-child(5) {transition-delay: .5s}
+.joueur:nth-child(6) {transition-delay: .6s}
+.joueur:nth-child(7) {transition-delay: .7s}
+.joueur:nth-child(8) {transition-delay: .8s}
+.joueur:nth-child(9) {transition-delay: .9s}
+.joueur:nth-child(10) {transition-delay: 1s}
+
+.joueurs i.not-visible {
+    opacity: 0;
+    transform: translate3d(0, 50%, 0);
+}
+.caracteristique {
+    position: relative;
+    text-transform: uppercase;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 90%;
+    margin: 15px 0;
+    transition: all 0.6s var(--lissage-1) 0.3s;
+    padding-bottom: 8px;
+}
+.caracteristique::before, .caracteristique::after {
+    content: '';
+    position: absolute;
+    background-color: #b3b3b3;
+    width: 100%;
+    height: 3px;
+    left: 0;
+    bottom: 0;
+}
+.caracteristique::after {
+    width: 0;
+    background-color: var(--emphasis-color);
+    transform-origin: left center;
+    transition: all .6s var(--lissage-1) ;
+}
+.cl-1::after {width: 10%;}
+.cl-2::after {width: 20%;}
+.cl-3::after {width: 30%;}
+.cl-4::after {width: 40%;}
+.cl-5::after {width: 50%;}
+.cl-6::after {width: 60%;}
+.cl-7::after {width: 70%;}
+.cl-8::after {width: 80%;}
+.cl-9::after {width: 90%;}
+.cl-10::after {width: 100%;}
+
+.caract-1 {transition-delay: .3s}
+.caract-2 {transition-delay: .4s}
+.caract-3 {transition-delay: .5s}
+.caract-4 {transition-delay: .6s}
+.caract-1::after {transition-delay: .8s}
+.caract-2::after {transition-delay: .9s}
+.caract-3::after {transition-delay: 1s}
+.caract-4::after {transition-delay: 1.1s}
+
+.caracteristique.not-visible, .info-salle.not-visible  {
+    opacity: 0;
+    transform: translate3d(10px, 0, 0);
+}
+.caracteristique.not-visible::after {
+    transform: scale(0, 1);
+}
+
+
 .social-net {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#titreFormulaire {
+.titreFormulaire {
     font-family: 'Montserrat', sans-serif;
-    font-size: 400%;
+    font-size: 300%;
+    text-transform: uppercase;
+    font-weight: 400;
     padding: 26px 0;
 }
 
-input[type="text"], input[type="number"] {
-width: 350px;
+.resainput{
+    width: 350px;
+    padding: 7px;
+    border-radius: 4px;
+    border: none;
+}
+.titreFormulaire {
+    animation: slidein-light 0.6s var(--lissage-1) .6s both;
+}
+.animate {
+    animation: slidein-light 0.6s var(--lissage-1) .7s both;
+}
+.animate:nth-child(2), .anim-delay-2 {
+    animation-delay: .8s;
+}
+.animate:nth-child(3), .anim-delay-3 {
+    animation-delay: .9s;
+}
+.animate:nth-child(4), .anim-delay-4 {
+    animation-delay: 1s;
+}
+.animate:nth-child(5), .anim-delay-5 {
+    animation-delay: 1.1s;
+}
+.animate:nth-child(6), .anim-delay-6 {
+    animation-delay: 1.2s;
 }
 
-input {
-    padding: 7px;
+@keyframes slidein-light {
+    from {
+        opacity: 0;
+        transform: translate3d(50%, 0, 0);
+    }
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
 }
 
 form {
