--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -690,7 +690,7 @@ a, a:hover {
 }
 .section-resa-theme {
     height: auto;
-    padding: 10px 0;
+    padding: 15px 0;
 }
 .section-resa-theme .resa-button-wrapper {
     transform: scale(0.6);
@@ -728,8 +728,9 @@ a, a:hover {
 #cont-footer {
     align-items: center;
     text-align: center;
-    padding: 40px 0 10px 0;
+    padding: 60px 0 60px 0;
     font-family: 'Montserrat', sans-serif;
+    font-size: 120%;
 }
 
 .titre-footer {
@@ -741,7 +742,7 @@ a, a:hover {
 }
 
 #carte {
-    color: #a31b18;
+    color: #ff7e68;
 }
 .card-img-top {
     height: 180px;
@@ -811,15 +812,15 @@ a, a:hover {
 .joueur {
     transition: all .3s .1s;
 }
-.joueur:nth-child(2) {transition-delay: .2s}
-.joueur:nth-child(3) {transition-delay: .3s}
-.joueur:nth-child(4) {transition-delay: .4s}
-.joueur:nth-child(5) {transition-delay: .5s}
-.joueur:nth-child(6) {transition-delay: .6s}
-.joueur:nth-child(7) {transition-delay: .7s}
-.joueur:nth-child(8) {transition-delay: .8s}
-.joueur:nth-child(9) {transition-delay: .9s}
-.joueur:nth-child(10) {transition-delay: 1s}
+.joueur:nth-child(2) {transition-delay: .2s;}
+.joueur:nth-child(3) {transition-delay: .3s;}
+.joueur:nth-child(4) {transition-delay: .4s;}
+.joueur:nth-child(5) {transition-delay: .5s;}
+.joueur:nth-child(6) {transition-delay: .6s;}
+.joueur:nth-child(7) {transition-delay: .7s;}
+.joueur:nth-child(8) {transition-delay: .8s;}
+.joueur:nth-child(9) {transition-delay: .9s;}
+.joueur:nth-child(10) {transition-delay: 1s;}
 
 .joueurs i.not-visible {
     opacity: 0;
@@ -892,6 +893,24 @@ a, a:hover {
     font-weight: 400;
     padding: 26px 0;
 }
+#tarifs {
+    font-size: 150%;
+    font-family: 'Montserrat';
+    font-weight: 300;
+}
+#tarifs .icons {
+    font-size: 200%;
+    white-space: nowrap;
+}
+#tarifs .row {
+    align-items: center;
+}
+#tarifs .row .col-10, #tarifs .row .col-2 {
+    margin-top: 20px;
+}
+.tarif-joueur {
+    animation: slidein-light-v .6s var(--lissage-1) 1s both;
+}
 
 .resainput{
     width: 350px;
@@ -902,29 +921,58 @@ a, a:hover {
 .titreFormulaire {
     animation: slidein-light 0.6s var(--lissage-1) .6s both;
 }
+
+.tarif-clock {
+    animation: slidein-light-reverse 0.6s var(--lissage-1) both;
+
+}
 .animate {
     animation: slidein-light 0.6s var(--lissage-1) .7s both;
 }
-.animate:nth-child(2), .anim-delay-2 {
-    animation-delay: .8s;
-}
-.animate:nth-child(3), .anim-delay-3 {
-    animation-delay: .9s;
-}
-.animate:nth-child(4), .anim-delay-4 {
-    animation-delay: 1s;
-}
-.animate:nth-child(5), .anim-delay-5 {
-    animation-delay: 1.1s;
-}
-.animate:nth-child(6), .anim-delay-6 {
-    animation-delay: 1.2s;
-}
+form .animate:nth-child(2), .anim-delay-2 {animation-delay: .8s;}
+form .animate:nth-child(3), .anim-delay-3 {animation-delay: .9s;}
+form .animate:nth-child(4), .anim-delay-4 {animation-delay: 1s;}
+form .animate:nth-child(5), .anim-delay-5 {animation-delay: 1.1s;}
+form .animate:nth-child(6), .anim-delay-6 {animation-delay: 1.2s;}
+form .animate:nth-child(7), .anim-delay-7 {animation-delay: 1.3s;}
+form .animate:nth-child(8), .anim-delay-8 {animation-delay: 1.4s;}
+form .animate:nth-child(9), .anim-delay-9 {animation-delay: 1.5s;}
+form .animate:nth-child(10), .anim-delay-10 {animation-delay: 1.6s;}
+.anim-delay-11 {animation-delay: 1.7s;}
+.anim-delay-12 {animation-delay: 1.8s;}
+.anim-delay-13 {animation-delay: 1.9s;}
+.anim-delay-14 {animation-delay: 2s;}
+.anim-delay-15 {animation-delay: 2.1s;}
+.anim-delay-16 {animation-delay: 2.2s;}
+.anim-delay-17 {animation-delay: 2.3s;}
+.anim-delay-18 {animation-delay: 2.4s;}
+.anim-delay-19 {animation-delay: 2.5s;}
+.anim-delay-20 {animation-delay: 2.6s;}
 
 @keyframes slidein-light {
     from {
         opacity: 0;
         transform: translate3d(50%, 0, 0);
+    }
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+@keyframes slidein-light-reverse {
+    from {
+        opacity: 0;
+        transform: translate3d(-50%, 0, 0);
+    }
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+@keyframes slidein-light-v {
+    from {
+        opacity: 0;
+        transform: translate3d(0, 80%, 0);
     }
     to {
         opacity: 1;
