--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -615,6 +615,13 @@ body {
     opacity: 0;
     transform: translate3d(30%, 0, 0);
 }
+.card-salle {
+    transition:  all .3s;
+}
+.card-salle:hover {
+    transform: scale(1.1);
+}
+
 a, a:hover {
     text-decoration: none;
     color: inherit;
@@ -723,14 +730,16 @@ a, a:hover {
 
 #footer-accueil {
     background-color: #575757;
+    font-family: 'Montserrat', sans-serif;
+    position: relative;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 #cont-footer {
     align-items: center;
     text-align: center;
     padding: 60px 0 60px 0;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 120%;
 }
 
 .titre-footer {
@@ -741,9 +750,6 @@ a, a:hover {
     font-size: 80%;
 }
 
-#carte {
-    color: #ff7e68;
-}
 .card-img-top {
     height: 180px;
     background-size: cover;
@@ -786,6 +792,21 @@ a, a:hover {
     text-align: center;
     padding-top: 10px;
     background-color: #575757;
+}
+#footer-infos {
+    padding: 20px 0;
+    align-items: center;
+}
+#logo-footer {
+    width: 70px;
+}
+#leaflet {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    height: 300px;
+    left:  0;
+    right: 0;
 }
 
 .description-salle {
@@ -913,7 +934,7 @@ a, a:hover {
 }
 
 .resainput{
-    width: 350px;
+    width: 400px;
     padding: 7px;
     border-radius: 4px;
     border: none;
@@ -998,5 +1019,53 @@ font-size: 80%;
 }
 
 div.row.description-salle {
-    padding-bottom: 0;
+    padding-bottom: 100px;
+}
+.lien-slide {
+    color: transparent !important;
+    transition: all .3s;
+    font-size: 150%;
+    text-transform: uppercase;
+    position: relative;
+    text-align: center;
+    white-space: nowrap;
+    padding: 8px;
+    overflow: hidden;
+    display: block;
+}
+.lien-footer {
+    display: inline-block;
+    font-size: 100%;
+}
+.lien-footer::before {
+    color: #fff !important;
+}
+/*.lien-salle:hover {
+    color: #cd1408;
+}*/
+.lien-slide::before, .lien-slide::after {
+    content: attr(data-texte);
+    color: #c0c0c0;
+    font-weight: 300;
+    padding: 8px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    transition: all 0.3s var(--lissage-1);
+}
+.lien-slide::after {
+    color: #f00;
+    font-weight: 600;
+    transform: translate3d(0, 100%, 0);
+}
+.lien-slide:hover::before {
+    transform: translate3d(0, -100%, 0);
+}
+.lien-slide:hover::after {
+    transform: translate3d(0, 0, 0);
+}
+.not-visible {
+    transition: none !important;
 }
